exemple.output
Terminals unused in grammar

   CONST
   GOTO
   CASE
   DOWNTO
   FOR_LOOP
   REPEAT
   OPPBINARY
   STRING_VALUE
   BOOLEAN_VALUE
   NUMBER
   COMPOP
   MODOP


Grammar

    0 $accept: programs $end

    1 programs: PROGRAM INDENTIFIER SEMICOLON ComposedInstruction
    2         | PROGRAM INDENTIFIER SEMICOLON ListDeclarations DeclarationOfMethods ComposedInstruction
    3         | PROGRAM INDENTIFIER SEMICOLON ListDeclarations ComposedInstruction
    4         | PROGRAM INDENTIFIER SEMICOLON DeclarationOfMethods ComposedInstruction
    5         | PROGRAM error SEMICOLON
    6         | PROGRAM INDENTIFIER error
    7         | PROGRAM INDENTIFIER SEMICOLON error

    8 ListDeclarations: Declaration
    9                 | Declaration ListDeclarations

   10 Declaration: VAR DeclarationCorp SEMICOLON
   11            | VAR DeclarationCorp error

   12 DeclarationCorp: ListIndentifiers COLON Type
   13                | ListIndentifiers COLON error
   14                | ListIndentifiers error Type

   15 ListIndentifiers: INDENTIFIER
   16                 | INDENTIFIER COMMA ListIndentifiers
   17                 | INDENTIFIER COMMA error

   18 Type: TYPE
   19     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER TWO_POINTS LITERAL_NUMBER CLOSE_SQUARE_BRACKETS OF TYPE
   20     | ARRAY error LITERAL_NUMBER TWO_POINTS LITERAL_NUMBER CLOSE_SQUARE_BRACKETS OF TYPE
   21     | ARRAY OPEN_SQUARE_BRACKETS error TWO_POINTS LITERAL_NUMBER CLOSE_SQUARE_BRACKETS OF TYPE
   22     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER error LITERAL_NUMBER CLOSE_SQUARE_BRACKETS OF TYPE
   23     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER TWO_POINTS error CLOSE_SQUARE_BRACKETS OF TYPE
   24     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER TWO_POINTS LITERAL_NUMBER error OF TYPE
   25     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER TWO_POINTS LITERAL_NUMBER CLOSE_SQUARE_BRACKETS error TYPE
   26     | ARRAY OPEN_SQUARE_BRACKETS LITERAL_NUMBER TWO_POINTS LITERAL_NUMBER CLOSE_SQUARE_BRACKETS OF error

   27 DeclarationOfMethods: DeclarationOfMethod
   28                     | DeclarationOfMethod DeclarationOfMethods

   29 DeclarationOfMethod: MethodHeader ComposedInstruction
   30                    | MethodHeader ListDeclarations ComposedInstruction
   31                    | MethodHeader ListDeclarations error

   32 MethodHeader: PROCEDURE INDENTIFIER
   33             | PROCEDURE INDENTIFIER Arguments
   34             | PROCEDURE error
   35             | FUNCTION INDENTIFIER
   36             | FUNCTION INDENTIFIER Arguments
   37             | FUNCTION error

   38 Arguments: OPEN_ROUND_BRACKETS ListParameters CLOSE_ROUND_BRACKETS
   39          | OPEN_ROUND_BRACKETS ListParameters error
   40          | error ListParameters CLOSE_ROUND_BRACKETS
   41          | OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS

   42 ListParameters: DeclarationCorp
   43               | DeclarationCorp SEMICOLON ListParameters

   44 ComposedInstruction: BEGINP ListInstructions END
   45                    | BEGINP END

   46 ListInstructions: Instruction SEMICOLON
   47                 | Instruction SEMICOLON ListInstructions
   48                 | Instruction error

   49 Instruction: Variable OPPAFFECT Expression
   50            | MethodCall
   51            | ComposedInstruction
   52            | IF Expression THEN Instruction ELSE Instruction
   53            | IF error THEN Instruction ELSE Instruction
   54            | IF Expression error Instruction ELSE Instruction
   55            | IF Expression THEN error ELSE Instruction
   56            | IF Expression THEN Instruction error Instruction
   57            | IF Expression THEN Instruction ELSE error
   58            | WHILE Expression DO Instruction
   59            | WHILE error DO Instruction
   60            | WHILE Expression error Instruction
   61            | WHILE Expression DO error
   62            | WRITE OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   63            | WRITE error CLOSE_ROUND_BRACKETS
   64            | WRITE OPEN_ROUND_BRACKETS error
   65            | WRITE OPEN_ROUND_BRACKETS ListExpressions CLOSE_ROUND_BRACKETS
   66            | WRITE error ListExpressions CLOSE_ROUND_BRACKETS
   67            | WRITE OPEN_ROUND_BRACKETS ListExpressions error
   68            | READ OPEN_ROUND_BRACKETS ListIndentifiers CLOSE_ROUND_BRACKETS
   69            | READ error ListIndentifiers CLOSE_ROUND_BRACKETS
   70            | READ OPEN_ROUND_BRACKETS ListIndentifiers error
   71            | READ OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   72            | READ error CLOSE_ROUND_BRACKETS
   73            | READ OPEN_ROUND_BRACKETS error

   74 Variable: INDENTIFIER
   75         | INDENTIFIER OPEN_SQUARE_BRACKETS Expression CLOSE_SQUARE_BRACKETS
   76         | INDENTIFIER OPEN_SQUARE_BRACKETS Expression error

   77 MethodCall: INDENTIFIER OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   78           | INDENTIFIER OPEN_ROUND_BRACKETS ListExpressions CLOSE_ROUND_BRACKETS
   79           | INDENTIFIER OPEN_ROUND_BRACKETS ListExpressions error

   80 ListExpressions: Expression
   81                | Expression COMMA ListExpressions

   82 Expression: Factor
   83           | Factor ADDOP Factor
   84           | Factor MODLOP Factor

   85 Factor: INDENTIFIER
   86       | INDENTIFIER OPEN_SQUARE_BRACKETS Expression CLOSE_SQUARE_BRACKETS
   87       | INDENTIFIER OPEN_SQUARE_BRACKETS Expression error
   88       | LITERAL_NUMBER
   89       | OPEN_ROUND_BRACKETS Expression CLOSE_ROUND_BRACKETS


Terminals, with rules where they appear

$end (0) 0
error (256) 5 6 7 11 13 14 17 20 21 22 23 24 25 26 31 34 37 39 40 48
    53 54 55 56 57 59 60 61 63 64 66 67 69 70 72 73 76 79 87
PROGRAM (258) 1 2 3 4 5 6 7
BEGINP (259) 44 45
END (260) 44 45
PROCEDURE (261) 32 33 34
FUNCTION (262) 35 36 37
CONST (263)
VAR (264) 10 11
IF (265) 52 53 54 55 56 57
THEN (266) 52 53 55 56 57
ELSE (267) 52 53 54 55 57
DO (268) 58 59 61
WHILE (269) 58 59 60 61
GOTO (270)
CASE (271)
DOWNTO (272)
FOR_LOOP (273)
REPEAT (274)
OPPBINARY (275)
WRITE (276) 62 63 64 65 66 67
READ (277) 68 69 70 71 72 73
TYPE (278) 18 19 20 21 22 23 24 25
STRING_VALUE (279)
BOOLEAN_VALUE (280)
COMMA (281) 16 17 81
OPEN_ROUND_BRACKETS (282) 38 39 41 62 64 65 67 68 70 71 73 77 78 79
    89
CLOSE_ROUND_BRACKETS (283) 38 40 41 62 63 65 66 68 69 71 72 77 78 89
OPEN_SQUARE_BRACKETS (284) 19 21 22 23 24 25 26 75 76 86 87
CLOSE_SQUARE_BRACKETS (285) 19 20 21 22 23 25 26 75 86
NUMBER (286)
OPPAFFECT (287) 49
ADDOP (288) 83
COMPOP (289)
MODOP (290)
MODLOP (291) 84
SEMICOLON (292) 1 2 3 4 5 7 10 43 46 47
COLON (293) 12 13
INDENTIFIER (294) 1 2 3 4 6 7 15 16 17 32 33 35 36 74 75 76 77 78 79
    85 86 87
TWO_POINTS (295) 19 20 21 23 24 25 26
OF (296) 19 20 21 22 23 24 26
ARRAY (297) 19 20 21 22 23 24 25 26
LITERAL_NUMBER (298) 19 20 21 22 23 24 25 26 88


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
programs (45)
    on left: 1 2 3 4 5 6 7, on right: 0
ListDeclarations (46)
    on left: 8 9, on right: 2 3 9 30 31
Declaration (47)
    on left: 10 11, on right: 8 9
DeclarationCorp (48)
    on left: 12 13 14, on right: 10 11 42 43
ListIndentifiers (49)
    on left: 15 16 17, on right: 12 13 14 16 68 69 70
Type (50)
    on left: 18 19 20 21 22 23 24 25 26, on right: 12 14
DeclarationOfMethods (51)
    on left: 27 28, on right: 2 4 28
DeclarationOfMethod (52)
    on left: 29 30 31, on right: 27 28
MethodHeader (53)
    on left: 32 33 34 35 36 37, on right: 29 30 31
Arguments (54)
    on left: 38 39 40 41, on right: 33 36
ListParameters (55)
    on left: 42 43, on right: 38 39 40 43
ComposedInstruction (56)
    on left: 44 45, on right: 1 2 3 4 29 30 51
ListInstructions (57)
    on left: 46 47 48, on right: 44 47
Instruction (58)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73, on right: 46 47 48 52 53 54 55 56 57 58 59
    60
Variable (59)
    on left: 74 75 76, on right: 49
MethodCall (60)
    on left: 77 78 79, on right: 50
ListExpressions (61)
    on left: 80 81, on right: 65 66 67 78 79 81
Expression (62)
    on left: 82 83 84, on right: 49 52 54 55 56 57 58 60 61 75 76 80
    81 86 87 89
Factor (63)
    on left: 85 86 87 88 89, on right: 82 83 84


state 0

    0 $accept: . programs $end

    PROGRAM  shift, and go to state 1

    programs  go to state 2


state 1

    1 programs: PROGRAM . INDENTIFIER SEMICOLON ComposedInstruction
    2         | PROGRAM . INDENTIFIER SEMICOLON ListDeclarations DeclarationOfMethods ComposedInstruction
    3         | PROGRAM . INDENTIFIER SEMICOLON ListDeclarations ComposedInstruction
    4         | PROGRAM . INDENTIFIER SEMICOLON DeclarationOfMethods ComposedInstruction
    5         | PROGRAM . error SEMICOLON
    6         | PROGRAM . INDENTIFIER error
    7         | PROGRAM . INDENTIFIER SEMICOLON error

    error        shift, and go to state 3
    INDENTIFIER  shift, and go to state 4


state 2

    0 $accept: programs . $end

    $end  shift, and go to state 5


state 3

    5 programs: PROGRAM error . SEMICOLON

    SEMICOLON  shift, and go to state 6


state 4

    1 programs: PROGRAM INDENTIFIER . SEMICOLON ComposedInstruction
    2         | PROGRAM INDENTIFIER . SEMICOLON ListDeclarations DeclarationOfMethods ComposedInstruction
    3         | PROGRAM INDENTIFIER . SEMICOLON ListDeclarations ComposedInstruction
    4         | PROGRAM INDENTIFIER . SEMICOLON DeclarationOfMethods ComposedInstruction
    6         | PROGRAM INDENTIFIER . error
    7         | PROGRAM INDENTIFIER . SEMICOLON error

    error      shift, and go to state 7
    SEMICOLON  shift, and go to state 8


state 5

    0 $accept: programs $end .

    $default  accept


state 6

    5 programs: PROGRAM error SEMICOLON .

    $default  reduce using rule 5 (programs)


state 7

    6 programs: PROGRAM INDENTIFIER error .

    $default  reduce using rule 6 (programs)


state 8

    1 programs: PROGRAM INDENTIFIER SEMICOLON . ComposedInstruction
    2         | PROGRAM INDENTIFIER SEMICOLON . ListDeclarations DeclarationOfMethods ComposedInstruction
    3         | PROGRAM INDENTIFIER SEMICOLON . ListDeclarations ComposedInstruction
    4         | PROGRAM INDENTIFIER SEMICOLON . DeclarationOfMethods ComposedInstruction
    7         | PROGRAM INDENTIFIER SEMICOLON . error

    error      shift, and go to state 9
    BEGINP     shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12
    VAR        shift, and go to state 13

    ListDeclarations      go to state 14
    Declaration           go to state 15
    DeclarationOfMethods  go to state 16
    DeclarationOfMethod   go to state 17
    MethodHeader          go to state 18
    ComposedInstruction   go to state 19


state 9

    7 programs: PROGRAM INDENTIFIER SEMICOLON error .

    $default  reduce using rule 7 (programs)


state 10

   44 ComposedInstruction: BEGINP . ListInstructions END
   45                    | BEGINP . END

    BEGINP       shift, and go to state 10
    END          shift, and go to state 20
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    ComposedInstruction  go to state 26
    ListInstructions     go to state 27
    Instruction          go to state 28
    Variable             go to state 29
    MethodCall           go to state 30


state 11

   32 MethodHeader: PROCEDURE . INDENTIFIER
   33             | PROCEDURE . INDENTIFIER Arguments
   34             | PROCEDURE . error

    error        shift, and go to state 31
    INDENTIFIER  shift, and go to state 32


state 12

   35 MethodHeader: FUNCTION . INDENTIFIER
   36             | FUNCTION . INDENTIFIER Arguments
   37             | FUNCTION . error

    error        shift, and go to state 33
    INDENTIFIER  shift, and go to state 34


state 13

   10 Declaration: VAR . DeclarationCorp SEMICOLON
   11            | VAR . DeclarationCorp error

    INDENTIFIER  shift, and go to state 35

    DeclarationCorp   go to state 36
    ListIndentifiers  go to state 37


state 14

    2 programs: PROGRAM INDENTIFIER SEMICOLON ListDeclarations . DeclarationOfMethods ComposedInstruction
    3         | PROGRAM INDENTIFIER SEMICOLON ListDeclarations . ComposedInstruction

    BEGINP     shift, and go to state 10
    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12

    DeclarationOfMethods  go to state 38
    DeclarationOfMethod   go to state 17
    MethodHeader          go to state 18
    ComposedInstruction   go to state 39


state 15

    8 ListDeclarations: Declaration .
    9                 | Declaration . ListDeclarations

    VAR  shift, and go to state 13

    $default  reduce using rule 8 (ListDeclarations)

    ListDeclarations  go to state 40
    Declaration       go to state 15


state 16

    4 programs: PROGRAM INDENTIFIER SEMICOLON DeclarationOfMethods . ComposedInstruction

    BEGINP  shift, and go to state 10

    ComposedInstruction  go to state 41


state 17

   27 DeclarationOfMethods: DeclarationOfMethod .
   28                     | DeclarationOfMethod . DeclarationOfMethods

    PROCEDURE  shift, and go to state 11
    FUNCTION   shift, and go to state 12

    $default  reduce using rule 27 (DeclarationOfMethods)

    DeclarationOfMethods  go to state 42
    DeclarationOfMethod   go to state 17
    MethodHeader          go to state 18


state 18

   29 DeclarationOfMethod: MethodHeader . ComposedInstruction
   30                    | MethodHeader . ListDeclarations ComposedInstruction
   31                    | MethodHeader . ListDeclarations error

    BEGINP  shift, and go to state 10
    VAR     shift, and go to state 13

    ListDeclarations     go to state 43
    Declaration          go to state 15
    ComposedInstruction  go to state 44


state 19

    1 programs: PROGRAM INDENTIFIER SEMICOLON ComposedInstruction .

    $default  reduce using rule 1 (programs)


state 20

   45 ComposedInstruction: BEGINP END .

    $default  reduce using rule 45 (ComposedInstruction)


state 21

   52 Instruction: IF . Expression THEN Instruction ELSE Instruction
   53            | IF . error THEN Instruction ELSE Instruction
   54            | IF . Expression error Instruction ELSE Instruction
   55            | IF . Expression THEN error ELSE Instruction
   56            | IF . Expression THEN Instruction error Instruction
   57            | IF . Expression THEN Instruction ELSE error

    error                shift, and go to state 45
    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 49
    Factor      go to state 50


state 22

   58 Instruction: WHILE . Expression DO Instruction
   59            | WHILE . error DO Instruction
   60            | WHILE . Expression error Instruction
   61            | WHILE . Expression DO error

    error                shift, and go to state 51
    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 52
    Factor      go to state 50


state 23

   62 Instruction: WRITE . OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   63            | WRITE . error CLOSE_ROUND_BRACKETS
   64            | WRITE . OPEN_ROUND_BRACKETS error
   65            | WRITE . OPEN_ROUND_BRACKETS ListExpressions CLOSE_ROUND_BRACKETS
   66            | WRITE . error ListExpressions CLOSE_ROUND_BRACKETS
   67            | WRITE . OPEN_ROUND_BRACKETS ListExpressions error

    error                shift, and go to state 53
    OPEN_ROUND_BRACKETS  shift, and go to state 54


state 24

   68 Instruction: READ . OPEN_ROUND_BRACKETS ListIndentifiers CLOSE_ROUND_BRACKETS
   69            | READ . error ListIndentifiers CLOSE_ROUND_BRACKETS
   70            | READ . OPEN_ROUND_BRACKETS ListIndentifiers error
   71            | READ . OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   72            | READ . error CLOSE_ROUND_BRACKETS
   73            | READ . OPEN_ROUND_BRACKETS error

    error                shift, and go to state 55
    OPEN_ROUND_BRACKETS  shift, and go to state 56


state 25

   74 Variable: INDENTIFIER .
   75         | INDENTIFIER . OPEN_SQUARE_BRACKETS Expression CLOSE_SQUARE_BRACKETS
   76         | INDENTIFIER . OPEN_SQUARE_BRACKETS Expression error
   77 MethodCall: INDENTIFIER . OPEN_ROUND_BRACKETS CLOSE_ROUND_BRACKETS
   78           | INDENTIFIER . OPEN_ROUND_BRACKETS ListExpressions CLOSE_ROUND_BRACKETS
   79           | INDENTIFIER . OPEN_ROUND_BRACKETS ListExpressions error

    OPEN_ROUND_BRACKETS   shift, and go to state 57
    OPEN_SQUARE_BRACKETS  shift, and go to state 58

    $default  reduce using rule 74 (Variable)


state 26

   51 Instruction: ComposedInstruction .

    $default  reduce using rule 51 (Instruction)


state 27

   44 ComposedInstruction: BEGINP ListInstructions . END

    END  shift, and go to state 59


state 28

   46 ListInstructions: Instruction . SEMICOLON
   47                 | Instruction . SEMICOLON ListInstructions
   48                 | Instruction . error

    error      shift, and go to state 60
    SEMICOLON  shift, and go to state 61


state 29

   49 Instruction: Variable . OPPAFFECT Expression

    OPPAFFECT  shift, and go to state 62


state 30

   50 Instruction: MethodCall .

    $default  reduce using rule 50 (Instruction)


state 31

   34 MethodHeader: PROCEDURE error .

    $default  reduce using rule 34 (MethodHeader)


state 32

   32 MethodHeader: PROCEDURE INDENTIFIER .
   33             | PROCEDURE INDENTIFIER . Arguments

    error                shift, and go to state 63
    OPEN_ROUND_BRACKETS  shift, and go to state 64

    BEGINP  reduce using rule 32 (MethodHeader)
    VAR     reduce using rule 32 (MethodHeader)

    Arguments  go to state 65


state 33

   37 MethodHeader: FUNCTION error .

    $default  reduce using rule 37 (MethodHeader)


state 34

   35 MethodHeader: FUNCTION INDENTIFIER .
   36             | FUNCTION INDENTIFIER . Arguments

    error                shift, and go to state 63
    OPEN_ROUND_BRACKETS  shift, and go to state 64

    BEGINP  reduce using rule 35 (MethodHeader)
    VAR     reduce using rule 35 (MethodHeader)

    Arguments  go to state 66


state 35

   15 ListIndentifiers: INDENTIFIER .
   16                 | INDENTIFIER . COMMA ListIndentifiers
   17                 | INDENTIFIER . COMMA error

    COMMA  shift, and go to state 67

    $default  reduce using rule 15 (ListIndentifiers)


state 36

   10 Declaration: VAR DeclarationCorp . SEMICOLON
   11            | VAR DeclarationCorp . error

    error      shift, and go to state 68
    SEMICOLON  shift, and go to state 69


state 37

   12 DeclarationCorp: ListIndentifiers . COLON Type
   13                | ListIndentifiers . COLON error
   14                | ListIndentifiers . error Type

    error  shift, and go to state 70
    COLON  shift, and go to state 71


state 38

    2 programs: PROGRAM INDENTIFIER SEMICOLON ListDeclarations DeclarationOfMethods . ComposedInstruction

    BEGINP  shift, and go to state 10

    ComposedInstruction  go to state 72


state 39

    3 programs: PROGRAM INDENTIFIER SEMICOLON ListDeclarations ComposedInstruction .

    $default  reduce using rule 3 (programs)


state 40

    9 ListDeclarations: Declaration ListDeclarations .

    $default  reduce using rule 9 (ListDeclarations)


state 41

    4 programs: PROGRAM INDENTIFIER SEMICOLON DeclarationOfMethods ComposedInstruction .

    $default  reduce using rule 4 (programs)


state 42

   28 DeclarationOfMethods: DeclarationOfMethod DeclarationOfMethods .

    $default  reduce using rule 28 (DeclarationOfMethods)


state 43

   30 DeclarationOfMethod: MethodHeader ListDeclarations . ComposedInstruction
   31                    | MethodHeader ListDeclarations . error

    error   shift, and go to state 73
    BEGINP  shift, and go to state 10

    ComposedInstruction  go to state 74


state 44

   29 DeclarationOfMethod: MethodHeader ComposedInstruction .

    $default  reduce using rule 29 (DeclarationOfMethod)


state 45

   53 Instruction: IF error . THEN Instruction ELSE Instruction

    THEN  shift, and go to state 75


state 46

   89 Factor: OPEN_ROUND_BRACKETS . Expression CLOSE_ROUND_BRACKETS

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 76
    Factor      go to state 50


state 47

   85 Factor: INDENTIFIER .
   86       | INDENTIFIER . OPEN_SQUARE_BRACKETS Expression CLOSE_SQUARE_BRACKETS
   87       | INDENTIFIER . OPEN_SQUARE_BRACKETS Expression error

    OPEN_SQUARE_BRACKETS  shift, and go to state 77

    $default  reduce using rule 85 (Factor)


state 48

   88 Factor: LITERAL_NUMBER .

    $default  reduce using rule 88 (Factor)


state 49

   52 Instruction: IF Expression . THEN Instruction ELSE Instruction
   54            | IF Expression . error Instruction ELSE Instruction
   55            | IF Expression . THEN error ELSE Instruction
   56            | IF Expression . THEN Instruction error Instruction
   57            | IF Expression . THEN Instruction ELSE error

    error  shift, and go to state 78
    THEN   shift, and go to state 79


state 50

   82 Expression: Factor .
   83           | Factor . ADDOP Factor
   84           | Factor . MODLOP Factor

    ADDOP   shift, and go to state 80
    MODLOP  shift, and go to state 81

    $default  reduce using rule 82 (Expression)


state 51

   59 Instruction: WHILE error . DO Instruction

    DO  shift, and go to state 82


state 52

   58 Instruction: WHILE Expression . DO Instruction
   60            | WHILE Expression . error Instruction
   61            | WHILE Expression . DO error

    error  shift, and go to state 83
    DO     shift, and go to state 84


state 53

   63 Instruction: WRITE error . CLOSE_ROUND_BRACKETS
   66            | WRITE error . ListExpressions CLOSE_ROUND_BRACKETS

    OPEN_ROUND_BRACKETS   shift, and go to state 46
    CLOSE_ROUND_BRACKETS  shift, and go to state 85
    INDENTIFIER           shift, and go to state 47
    LITERAL_NUMBER        shift, and go to state 48

    ListExpressions  go to state 86
    Expression       go to state 87
    Factor           go to state 50


state 54

   62 Instruction: WRITE OPEN_ROUND_BRACKETS . CLOSE_ROUND_BRACKETS
   64            | WRITE OPEN_ROUND_BRACKETS . error
   65            | WRITE OPEN_ROUND_BRACKETS . ListExpressions CLOSE_ROUND_BRACKETS
   67            | WRITE OPEN_ROUND_BRACKETS . ListExpressions error

    error                 shift, and go to state 88
    OPEN_ROUND_BRACKETS   shift, and go to state 46
    CLOSE_ROUND_BRACKETS  shift, and go to state 89
    INDENTIFIER           shift, and go to state 47
    LITERAL_NUMBER        shift, and go to state 48

    ListExpressions  go to state 90
    Expression       go to state 87
    Factor           go to state 50


state 55

   69 Instruction: READ error . ListIndentifiers CLOSE_ROUND_BRACKETS
   72            | READ error . CLOSE_ROUND_BRACKETS

    CLOSE_ROUND_BRACKETS  shift, and go to state 91
    INDENTIFIER           shift, and go to state 35

    ListIndentifiers  go to state 92


state 56

   68 Instruction: READ OPEN_ROUND_BRACKETS . ListIndentifiers CLOSE_ROUND_BRACKETS
   70            | READ OPEN_ROUND_BRACKETS . ListIndentifiers error
   71            | READ OPEN_ROUND_BRACKETS . CLOSE_ROUND_BRACKETS
   73            | READ OPEN_ROUND_BRACKETS . error

    error                 shift, and go to state 93
    CLOSE_ROUND_BRACKETS  shift, and go to state 94
    INDENTIFIER           shift, and go to state 35

    ListIndentifiers  go to state 95


state 57

   77 MethodCall: INDENTIFIER OPEN_ROUND_BRACKETS . CLOSE_ROUND_BRACKETS
   78           | INDENTIFIER OPEN_ROUND_BRACKETS . ListExpressions CLOSE_ROUND_BRACKETS
   79           | INDENTIFIER OPEN_ROUND_BRACKETS . ListExpressions error

    OPEN_ROUND_BRACKETS   shift, and go to state 46
    CLOSE_ROUND_BRACKETS  shift, and go to state 96
    INDENTIFIER           shift, and go to state 47
    LITERAL_NUMBER        shift, and go to state 48

    ListExpressions  go to state 97
    Expression       go to state 87
    Factor           go to state 50


state 58

   75 Variable: INDENTIFIER OPEN_SQUARE_BRACKETS . Expression CLOSE_SQUARE_BRACKETS
   76         | INDENTIFIER OPEN_SQUARE_BRACKETS . Expression error

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 98
    Factor      go to state 50


state 59

   44 ComposedInstruction: BEGINP ListInstructions END .

    $default  reduce using rule 44 (ComposedInstruction)


state 60

   48 ListInstructions: Instruction error .

    $default  reduce using rule 48 (ListInstructions)


state 61

   46 ListInstructions: Instruction SEMICOLON .
   47                 | Instruction SEMICOLON . ListInstructions

    BEGINP       shift, and go to state 10
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    $default  reduce using rule 46 (ListInstructions)

    ComposedInstruction  go to state 26
    ListInstructions     go to state 99
    Instruction          go to state 28
    Variable             go to state 29
    MethodCall           go to state 30


state 62

   49 Instruction: Variable OPPAFFECT . Expression

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 100
    Factor      go to state 50


state 63

   40 Arguments: error . ListParameters CLOSE_ROUND_BRACKETS

    INDENTIFIER  shift, and go to state 35

    DeclarationCorp   go to state 101
    ListIndentifiers  go to state 37
    ListParameters    go to state 102


state 64

   38 Arguments: OPEN_ROUND_BRACKETS . ListParameters CLOSE_ROUND_BRACKETS
   39          | OPEN_ROUND_BRACKETS . ListParameters error
   41          | OPEN_ROUND_BRACKETS . CLOSE_ROUND_BRACKETS

    CLOSE_ROUND_BRACKETS  shift, and go to state 103
    INDENTIFIER           shift, and go to state 35

    DeclarationCorp   go to state 101
    ListIndentifiers  go to state 37
    ListParameters    go to state 104


state 65

   33 MethodHeader: PROCEDURE INDENTIFIER Arguments .

    $default  reduce using rule 33 (MethodHeader)


state 66

   36 MethodHeader: FUNCTION INDENTIFIER Arguments .

    $default  reduce using rule 36 (MethodHeader)


state 67

   16 ListIndentifiers: INDENTIFIER COMMA . ListIndentifiers
   17                 | INDENTIFIER COMMA . error

    error        shift, and go to state 105
    INDENTIFIER  shift, and go to state 35

    ListIndentifiers  go to state 106


state 68

   11 Declaration: VAR DeclarationCorp error .

    $default  reduce using rule 11 (Declaration)


state 69

   10 Declaration: VAR DeclarationCorp SEMICOLON .

    $default  reduce using rule 10 (Declaration)


state 70

   14 DeclarationCorp: ListIndentifiers error . Type

    TYPE   shift, and go to state 107
    ARRAY  shift, and go to state 108

    Type  go to state 109


state 71

   12 DeclarationCorp: ListIndentifiers COLON . Type
   13                | ListIndentifiers COLON . error

    error  shift, and go to state 110
    TYPE   shift, and go to state 107
    ARRAY  shift, and go to state 108

    Type  go to state 111


state 72

    2 programs: PROGRAM INDENTIFIER SEMICOLON ListDeclarations DeclarationOfMethods ComposedInstruction .

    $default  reduce using rule 2 (programs)


state 73

   31 DeclarationOfMethod: MethodHeader ListDeclarations error .

    $default  reduce using rule 31 (DeclarationOfMethod)


state 74

   30 DeclarationOfMethod: MethodHeader ListDeclarations ComposedInstruction .

    $default  reduce using rule 30 (DeclarationOfMethod)


state 75

   53 Instruction: IF error THEN . Instruction ELSE Instruction

    BEGINP       shift, and go to state 10
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    ComposedInstruction  go to state 26
    Instruction          go to state 112
    Variable             go to state 29
    MethodCall           go to state 30


state 76

   89 Factor: OPEN_ROUND_BRACKETS Expression . CLOSE_ROUND_BRACKETS

    CLOSE_ROUND_BRACKETS  shift, and go to state 113


state 77

   86 Factor: INDENTIFIER OPEN_SQUARE_BRACKETS . Expression CLOSE_SQUARE_BRACKETS
   87       | INDENTIFIER OPEN_SQUARE_BRACKETS . Expression error

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Expression  go to state 114
    Factor      go to state 50


state 78

   54 Instruction: IF Expression error . Instruction ELSE Instruction

    BEGINP       shift, and go to state 10
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    ComposedInstruction  go to state 26
    Instruction          go to state 115
    Variable             go to state 29
    MethodCall           go to state 30


state 79

   52 Instruction: IF Expression THEN . Instruction ELSE Instruction
   55            | IF Expression THEN . error ELSE Instruction
   56            | IF Expression THEN . Instruction error Instruction
   57            | IF Expression THEN . Instruction ELSE error

    error        shift, and go to state 116
    BEGINP       shift, and go to state 10
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    ComposedInstruction  go to state 26
    Instruction          go to state 117
    Variable             go to state 29
    MethodCall           go to state 30


state 80

   83 Expression: Factor ADDOP . Factor

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Factor  go to state 118


state 81

   84 Expression: Factor MODLOP . Factor

    OPEN_ROUND_BRACKETS  shift, and go to state 46
    INDENTIFIER          shift, and go to state 47
    LITERAL_NUMBER       shift, and go to state 48

    Factor  go to state 119


state 82

   59 Instruction: WHILE error DO . Instruction

    BEGINP       shift, and go to state 10
    IF           shift, and go to state 21
    WHILE        shift, and go to state 22
    WRITE        shift, and go to state 23
    READ         shift, and go to state 24
    INDENTIFIER  shift, and go to state 25

    ComposedInstruction  go to state 26
    Instruction          go to state 120
    Variable             go to state 29
    MethodCall           go to state 30


state 83

